Adjust user controller and add route in swagger
