# docs/swagger.yaml
@@ -100,6 +100,8 @@ definitions:
         type: string
       id:
         type: integer
+      order_image:
+        type: string
       status:
         type: boolean
       total_price:
@@ -155,8 +157,6 @@ definitions:
       payment_provider:
         type: string
       transaction_date:
-        type: string
-      transaction_image:
         type: string
       updated_at:
         type: string
@@ -1331,6 +1331,38 @@ paths:
       summary: Update a type car
       tags:
       - type-cars
+  /api/cms/user/profile/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update profile user or admin
+      parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: Update profile user or admin
+      tags:
+      - users
   /api/cms/users:
     get:
       description: Get all users
@@ -1428,7 +1460,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Update existing user
+      description: Update existing user by id (only admin)
       parameters:
       - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
         in: header
@@ -1453,7 +1485,7 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
-      summary: Update existing user
+      summary: Update existing user by id (only admin)
       tags:
       - users
   /roles/{id}:
